# cfg-match-rs

./: Cargo.toml  ci.nix  shell.nix
.github/workflows/: cfg-match.yml
src/: lib.rs
tests/: smoke.rs
